--- a/src/pages/Auth/styles.scss
+++ b/src/pages/Auth/styles.scss
@@ -9,26 +9,37 @@ $tablet: 850px;
   max-width: 400px;
   margin: auto;
   margin-top: 100px;
-  input {
-    background-color: transparent !important;
+  .title {
+    font-size: large;
+    margin-left: 1.5em;
+    color: $black;
   }
-  .buttons {
-    display: flex;
-    justify-content: center;
-
-    img {
-      margin-left: 10px;
-      width: 20px;
-      height: 20px;
+  .form-container {
+    width: 30vw;
+    padding: 2em;
+    box-shadow: $shadow;
+    border-radius: 1em;
+    margin-top: auto;
+    @include small-laptop() {
+      width: 50vw;
     }
-    .oak-admin-auth-btn {
-      padding: 1em 2em;
-      font-size: 1.5em;
-    }
-
     @include tablet() {
-      flex-direction: column;
-      align-items: center;
+      width: 60vw;
+    }
+    @include smartphone() {
+      width: 90vw;
+    }
+    .form-input-label {
+    }
+    .form-input {
+      border: 0.1em solid lighten($color: $tint, $amount: 10);
+      color: $black;
+    }
+    .login-btn {
+      margin: 0 auto;
+      width: 60%;
+      font-size: 1.4em;
+      padding: 1.5em 0;
     }
   }
 }
