--- a/src/componentz/admin/Sidebar/styles.scss
+++ b/src/componentz/admin/Sidebar/styles.scss
@@ -15,6 +15,18 @@
     .logoIcon {
       width: 3em;
     }
+    span {
+      font-size: 1.6em;
+      margin-left: 0.5em;
+      font-weight: 600;
+      letter-spacing: 1.5px;
+      text-shadow: $t-shadow;
+      color: lighten($color: $black, $amount: 20);
+      transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    }
+    .collapsed-logo-text {
+      font-size: 1.2em;
+    }
   }
   .sidebar-links {
     padding: 2em 0;
