--- a/src/pages/Auth/styles.scss
+++ b/src/pages/Auth/styles.scss
@@ -35,6 +35,10 @@ $tablet: 850px;
       border: 0.1em solid lighten($color: $tint, $amount: 10);
       color: $black;
     }
+    .auth-loading {
+      height: 3em;
+      width: 3em;
+    }
     .login-btn {
       margin: 0 auto;
       width: 60%;
