--- a/src/Scss/exploreBtn.scss
+++ b/src/Scss/exploreBtn.scss
@@ -6,7 +6,7 @@ $Archivo: 'Archivo', sans-serif;
   height: max-content;
   display: flex;
   align-items: center;
-  padding: 0 1rem 0 0;
+  padding: 0.75rem 1.5rem 0.75rem 0.75rem;
   cursor: pointer;
   p {
     font-family: $Archivo;
