--- a/src/Scss/homepage.scss
+++ b/src/Scss/homepage.scss
@@ -6,10 +6,21 @@ $grey: #a9a6a6;
 $blue: #0aa7ff;
 $purple: #ff0ac9;
 $yellow: #ffba0a;
+
+// Mixins
+@mixin BGConfig($size, $position) {
+  background-position: $position;
+  background-size: $size;
+  background-repeat: no-repeat;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: $Archivo;
+  font-weight: normal;
+  font-size: 18px;
 }
 #homePage {
   //   Section 2
@@ -19,7 +30,7 @@ $yellow: #ffba0a;
     display: flex;
 
     .introTextContent {
-      //   background: #a15c5c;
+      // background: #a15c5c;
       width: 60%;
       .quoteSrc {
         display: flex;
@@ -39,23 +50,35 @@ $yellow: #ffba0a;
         font-family: $DM;
         text-transform: capitalize;
         font-size: 78px;
+        font-weight: normal;
         //   max-width: 90%;
         margin-bottom: 4rem;
       }
     }
 
-    //   This is the hexagon design section, I'd like to see the fucking designer work some magic 😡😤
-
     .introVideoButton {
-      // background: rgba(80, 113, 151, 0.5);
       width: 40%;
+      // background: rgb(201, 152, 152);
 
-      // .hexagon {
-      height: 500px;
-      width: 400px;
-      background: $teal;
-      clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-      // }
+      .hexagon {
+        height: 600px;
+        width: 500px;
+        margin-top: -30px;
+        background: url(../Assets/polygonVideoPlaceholder.svg);
+        @include BGConfig(100%, top);
+        position: relative;
+
+        #play_btn {
+          height: 125px;
+          width: 125px;
+          background: url(../Assets/playbutton.svg);
+          @include BGConfig(100%, center);
+          position: absolute;
+          top: 32%;
+          left: 37%;
+          cursor: pointer;
+        }
+      }
     }
   }
 
@@ -64,20 +87,28 @@ $yellow: #ffba0a;
   #whoAreYou {
     min-height: 100vh;
     width: 100%;
+    margin-bottom: 7rem;
 
     #whoAreYouContent {
       display: flex;
+      justify-content: space-between;
       .AboutDeets {
-        width: 100%;
+        // background: rgb(121, 223, 126);
+        flex-grow: 2;
         h1 {
           font-family: $DM;
-          font-size: 68px;
+          font-size: 54px;
+          line-height: 93px;
           margin: 2rem 0;
           text-transform: capitalize;
+          width: 80%;
+          // background: rgb(161, 131, 131);
         }
         p {
           font-family: $Archivo;
           font-size: 20px;
+          font-weight: normal;
+          line-height: 160.8%;
           margin-bottom: 4rem;
           color: $grey;
           max-width: 75%;
@@ -92,13 +123,97 @@ $yellow: #ffba0a;
         position: relative;
         right: 0;
         // background: rgb(187, 148, 148);
-        width: 70%;
-        padding-left: 8rem;
+        flex-grow: 1;
       }
     }
   }
 
-  //   Section 3
+  // Section3
+
+  #RssCategories {
+    margin-bottom: 7rem;
+    #sectionTitle {
+      font-family: $DM;
+      font-size: 77px;
+      font-weight: normal;
+      text-transform: capitalize;
+    }
+    #sectionDetails {
+      max-width: 60%;
+      font-family: $Archivo;
+      font-size: 18px;
+      line-height: 160.8%;
+      color: $grey;
+      margin: 3rem 0 4rem 0;
+    }
+    .cards_mother {
+      display: flex;
+      flex-wrap: wrap;
+      .rssCard {
+        background: #eec9ff;
+        margin: 1rem;
+        padding: 1.75rem;
+        width: 600px;
+        height: 400px;
+        border-radius: 10px;
+        .cardTitle {
+          font-family: $Archivo;
+          font-size: 33px;
+          font-weight: bold;
+        }
+        .cardContent {
+          margin: 2rem 0 4rem 0;
+          width: 80%;
+        }
+        #learnMore_btn {
+          width: max-content;
+          display: flex;
+          justify-content: space-between;
+          padding: 1.5rem 3rem;
+          border-radius: 300px;
+          cursor: pointer;
+          p {
+            margin: 0;
+            font-size: 22px;
+            color: white;
+          }
+          .learnMore_icon {
+            height: 25px;
+            width: 25px;
+            margin-left: 2rem;
+            background: url(../Assets/rightIcon.svg);
+            @include BGConfig(100%, center);
+          }
+        }
+      }
+      .cardOne {
+        background: #eec9ff;
+        div {
+          background: #b00aff;
+        }
+      }
+      .cardTwo {
+        background: #bce7ff;
+        div {
+          background: #0aa7ff;
+        }
+      }
+      .cardThree {
+        background: #ffd9c9;
+        div {
+          background: #ff6725;
+        }
+      }
+      .cardFour {
+        background: #ffc9ed;
+        div {
+          background: #ff34ba;
+        }
+      }
+    }
+  }
+
+  //   Section 4
 
   #aboutFounder {
     .aboutContent {
@@ -119,6 +234,7 @@ $yellow: #ffba0a;
           color: $grey;
           font-family: $Archivo;
           font-size: 22px;
+          line-height: 130.1%;
           margin-bottom: 6rem;
         }
       }
@@ -153,7 +269,10 @@ $yellow: #ffba0a;
         .founderDetails {
           margin-bottom: 2rem;
           font-family: $Archivo;
+          font-weight: normal;
           font-size: 16px;
+          line-height: 20px;
+          text-transform: capitalize;
         }
       }
     }
@@ -163,6 +282,7 @@ $yellow: #ffba0a;
 
   #syllabusIntro {
     margin-top: 8rem;
+    height: 100vh;
 
     #syllabusIntroContent {
       display: flex;
@@ -172,6 +292,7 @@ $yellow: #ffba0a;
           font-family: $DM;
           font-size: 78px;
           text-transform: capitalize;
+          margin: 3rem 0;
         }
       }
       #syllabusCards {
