--- a/src/pages/Carers/Carers.scss
+++ b/src/pages/Carers/Carers.scss
@@ -45,8 +45,19 @@ $yellow: #ffba0a;
       font-size: 78px;
       font-weight: normal;
       //   max-width: 90%;
-      margin-bottom: 4rem;
+      margin-bottom: 3rem;
       line-height: auto;
+    }
+    #quoteText {
+      font-family: $Archivo;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 22px;
+      line-height: 31px;
+      text-transform: capitalize;
+      width: 80%;
+      color: rgba(0, 0, 0, 0.66);
+      margin-bottom: 4rem;
     }
     #watchStory {
       background: #bce7ff;
@@ -80,9 +91,160 @@ $yellow: #ffba0a;
       height: 600px;
       width: 500px;
       margin-top: -30px;
-      background: url(../../Assets/images/Parent.svg);
+      background: url(../../Assets/images/Careers.svg);
       @include BGConfig(100%, top);
       position: relative;
+    }
+  }
+}
+
+#Carer_goals {
+  background: url(../../Assets/images/blue_hugging.svg);
+  @include BGConfig(100%, center);
+  min-height: 90vh;
+  height: max-content;
+  border-radius: 10px;
+  padding: 1rem 2rem;
+  //   padding-top: 10rem;
+  padding-bottom: 10rem;
+  //   width: 105%;
+  #heartIcon {
+    height: 100px;
+    width: 100px;
+    background: url(../../Assets/icons/heartIcon.svg);
+    @include BGConfig(100%, center);
+    // margin-top: 6rem;
+  }
+  p {
+    font-family: $Archivo;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 33px;
+    line-height: 59px;
+    text-transform: capitalize;
+    color: #ffffff;
+    margin: 2rem 0;
+  }
+}
+
+#forYou {
+  width: 859px;
+  height: 652px;
+  background: #ffffff;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.178);
+  border-radius: 12px;
+  padding: 1rem 2rem;
+  margin: -8rem 0 0 2rem;
+  p {
+    font-size: 23px;
+    line-height: 41px;
+    text-transform: capitalize;
+    color: rgba(0, 0, 0, 0.49);
+  }
+  h1 {
+    font-family: $DM;
+    font-weight: normal;
+    font-size: 55px;
+    line-height: 98px;
+    text-transform: capitalize;
+    color: #000000;
+    position: relative;
+    margin-bottom: 1rem;
+
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: 10px;
+      width: 50px;
+      height: 10px;
+      background: $blue;
+      border-radius: 10px;
+    }
+  }
+}
+
+#availiableCourses {
+  margin-top: 6rem;
+  h2 {
+    font-family: $DM;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 55px;
+    line-height: 98px;
+    text-transform: capitalize;
+  }
+  .courses {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 2rem;
+    .blueTag {
+      background: $blue;
+      width: 100px;
+      height: 36px;
+    }
+    .courseContainer {
+      // position: relative;
+      width: 582px;
+      height: max-content;
+      background: #ffffff;
+      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+      border-radius: 12px;
+      padding: 2rem 3rem;
+      margin-top: -1rem;
+      // display: none;
+
+      h3 {
+        font-family: $Archivo;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 33px;
+        line-height: 41px;
+        text-transform: capitalize;
+        color: #000000;
+        margin-bottom: 1rem;
+      }
+      #ProjectMeAim {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 15px;
+        line-height: 27px;
+        text-transform: capitalize;
+        color: rgba(0, 0, 0, 0.58);
+        margin-bottom: 1rem;
+      }
+      ul {
+        // list-style: url(../../Assets/icons/blueHyphen.svg);
+        // list-style: o;
+        li {
+          margin-bottom: 2rem;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 22px;
+          line-height: 27px;
+          text-transform: capitalize;
+          color: #000000;
+          list-style: url(../../Assets/icons/blueHyphen.svg);
+        }
+      }
+      .getCourse {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 469px;
+        height: 76px;
+        background: $blue;
+        border-radius: 900px;
+        color: white;
+        cursor: pointer;
+
+        font-style: normal;
+        font-weight: 500;
+        font-size: 25px;
+        line-height: 31px;
+        text-transform: capitalize;
+        color: #ffffff;
+      }
     }
   }
 }
