modified letter spacing and height

--- a/src/Scss/homepage.scss
+++ b/src/Scss/homepage.scss
@@ -53,7 +53,8 @@ $yellow: #ffba0a;
         font-size: 72px;
         font-weight: normal;
         margin-bottom: 4rem;
-        line-height: 107px;
+        line-height: 100px;
+        letter-spacing: normal;
       }
     }
 
