fix text font-sizes and tumblain dimentions

--- a/src/componentz/CustomInput/styles.scss
+++ b/src/componentz/CustomInput/styles.scss
@@ -8,7 +8,7 @@
   .form-input {
     background: none;
     background-color: $white;
-    color: $tint;
+    color: $black;
     // font-family: ;
     font-size: 1.2em;
     border-radius: 0.5em;
@@ -17,7 +17,7 @@
     outline: none;
   }
   .form-input-label {
-    color: $tint;
+    color: $black;
     font-size: 1.2em;
     // font-family: ;
     margin-left: 0.2em;
