--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
-}
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import "./constants/scss/colors";
+@import "./constants/scss/variables";
+@import "./constants/scss/mixins";
+@import "./constants/scss/default";
+@import "./constants/scss/framework";
+@import "./constants/scss/fonts";
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input-seperator {
+  height: 2em;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.custom-btn {
+  cursor: pointer;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+  text-align: center;
+  color: $white;
+  height: 2.5em;
+  padding: 1em 2em;
+  // border-radius: 3em;
+  box-shadow: $shadow;
+  font-weight: 700;
+  a {
+    font-size: 0.9em;
+    margin: 0;
+    color: $white;
   }
 }
