modified letter spacing and height

--- a/src/Scss/homepage.scss
+++ b/src/Scss/homepage.scss
@@ -106,6 +106,7 @@ $yellow: #ffba0a;
           margin: 2rem 0;
           text-transform: capitalize;
           width: 80%;
+          letter-spacing: normal;
           // background: rgb(161, 131, 131);
         }
         p {
