--- a/src/componentz/BlogOverview/styles.scss
+++ b/src/componentz/BlogOverview/styles.scss
@@ -16,7 +16,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 57.6em;
+    // height: 57.6em;
   }
   .article-text-button {
     flex: 0 0 calc(100% / 3);
@@ -25,10 +25,10 @@
     overflow: hidden;
     .article-text {
       .main-article-title {
-        font-size: 6.6em;
+        // font-size: 6.6em;
       }
       .main-article-hook {
-        font-size: 2.2em;
+        // font-size: 2.2em;
       }
     }
     .cr-btn-container {
