--- a/src/pages/PublicSpeaking/PublicSpeaking.scss
+++ b/src/pages/PublicSpeaking/PublicSpeaking.scss
@@ -50,6 +50,17 @@ $publicSpeakingOrange: #ff6725;
       margin-bottom: 4rem;
       line-height: auto;
     }
+    #quoteText {
+      font-family: $Archivo;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 22px;
+      line-height: 31px;
+      text-transform: capitalize;
+      width: 80%;
+      color: rgba(0, 0, 0, 0.66);
+      margin-bottom: 4rem;
+    }
     #watchStory {
       background: hsla(18, 100%, 57%, 0.5);
       height: 64px;
@@ -85,6 +96,219 @@ $publicSpeakingOrange: #ff6725;
       background: url(../../Assets/images/PublicSpeaking.svg);
       @include BGConfig(100%, top);
       position: relative;
+    }
+  }
+}
+#PS_goals {
+  background: url(../../Assets/images/Orange_hugging.svg);
+  @include BGConfig(100%, center);
+  min-height: 90vh;
+  height: max-content;
+  border-radius: 10px;
+  padding: 1rem 2rem;
+  //   padding-top: 10rem;
+  padding-bottom: 10rem;
+  //   width: 105%;
+  #heartIcon {
+    height: 100px;
+    width: 100px;
+    background: url(../../Assets/icons/orangeHeartIcon.svg);
+    @include BGConfig(100%, center);
+    // margin-top: 6rem;
+  }
+  p {
+    font-family: $Archivo;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 33px;
+    line-height: 59px;
+    text-transform: capitalize;
+    color: #ffffff;
+    margin: 2rem 0;
+  }
+}
+
+#PS_forYou {
+  width: 859px;
+  height: 652px;
+  background: #ffffff;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.178);
+  border-radius: 12px;
+  padding: 1rem 2rem;
+  margin: -8rem 0 0 2rem;
+  ul {
+    li {
+      font-style: normal;
+      font-weight: normal;
+      font-size: 23px;
+      line-height: 41px;
+      text-transform: capitalize;
+      color: rgba(0, 0, 0, 0.49);
+      list-style: outside;
+      margin-bottom: 2rem;
+    }
+  }
+  h1 {
+    font-family: $DM;
+    font-weight: normal;
+    font-size: 55px;
+    line-height: 55px;
+    text-transform: capitalize;
+    color: #000000;
+    position: relative;
+    margin-bottom: 3rem;
+
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: -1rem;
+      width: 50px;
+      height: 10px;
+      background: $publicSpeakingOrange;
+      border-radius: 10px;
+    }
+  }
+}
+
+#topicsSection {
+  margin-top: 4rem;
+  #questionAndImage {
+    display: flex;
+    justify-content: space-between;
+    #questions {
+      padding-top: 2rem;
+      h3 {
+        font-family: $DM;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 55px;
+        line-height: 98px;
+        text-transform: capitalize;
+        color: #000000;
+        margin-bottom: 2rem;
+      }
+      ul {
+        li {
+          font-style: normal;
+          font-weight: normal;
+          font-size: 22px;
+          line-height: 27px;
+          text-transform: capitalize;
+          margin-bottom: 1.5rem;
+          list-style: url(../../Assets/icons/orangeHyphen.svg);
+          margin-left: 1rem;
+        }
+      }
+    }
+    #PS_Image {
+      width: 553px;
+      height: 611px;
+      background: url(../../Assets/images/orangePublicSpeaking.svg);
+      @include BGConfig(100%, center);
+    }
+  }
+
+  #note {
+    margin-top: 6rem;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 51px;
+    text-transform: capitalize;
+    color: #ffffff;
+    height: max-content;
+    background: $publicSpeakingOrange;
+    height: 255px;
+    border-radius: 22px;
+  }
+
+  #whatWeDiscuss {
+    margin-top: 6rem;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+
+    h3 {
+      margin-bottom: 1rem;
+      width: 100vw;
+      font-family: $DM;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 55px;
+      line-height: 98px;
+      text-transform: capitalize;
+      color: #000000;
+    }
+    #topicCard {
+      margin: 1rem 1rem 3rem 2rem;
+    }
+  }
+
+  #theChurch {
+    display: flex;
+    #theChurchResponse {
+      // width: 50%;
+      min-width: 801px;
+      height: 763px;
+      background: $publicSpeakingOrange;
+      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+      border-radius: 12px;
+      padding: 2rem;
+
+      h2 {
+        color: white;
+        font-weight: normal;
+        font-size: 55px;
+        line-height: 55px;
+        text-transform: capitalize;
+        margin-bottom: 2rem;
+      }
+      p {
+        color: white;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 29px;
+        line-height: 52px;
+        text-transform: capitalize;
+      }
+    }
+    #churchTopic {
+      margin-left: 2rem;
+      h3 {
+        width: 482px;
+        font-weight: normal;
+        font-size: 55px;
+        line-height: 63px;
+        text-transform: capitalize;
+        color: #000000;
+        margin-bottom: 3rem;
+        position: relative;
+        &::before {
+          content: '';
+          position: absolute;
+          bottom: -10px;
+          left: 0;
+          border-radius: 20px;
+          height: 0.5rem;
+          width: 2rem;
+          background: $publicSpeakingOrange;
+        }
+      }
+      ul {
+        li {
+          font-weight: normal;
+          font-size: 22px;
+          line-height: 27px;
+          text-transform: capitalize;
+          color: #000000;
+          list-style: url(../../Assets/icons/orangeHyphen.svg);
+          margin-bottom: 1rem;
+        }
+      }
     }
   }
 }
