--- a/src/Scss/churchMessage.scss
+++ b/src/Scss/churchMessage.scss
@@ -15,7 +15,7 @@ $churchPagePurple: #b00aff;
   background-repeat: no-repeat;
 }
 
-#intro {
+#Church_intro {
   min-height: 100vh;
   display: flex;
 
@@ -43,6 +43,18 @@ $churchPagePurple: #b00aff;
       font-weight: normal;
       //   max-width: 90%;
       margin-bottom: 4rem;
+      line-height: 107px;
+    }
+    #quoteText {
+      font-family: $Archivo;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 22px;
+      line-height: 31px;
+      text-transform: capitalize;
+      width: 80%;
+      color: rgba(0, 0, 0, 0.66);
+      margin-bottom: 3rem;
     }
     #watchStory {
       background: rgba(177, 10, 255, 0.5);
@@ -90,6 +102,146 @@ $churchPagePurple: #b00aff;
       //     left: 37%;
       //     cursor: pointer;
       //   }
+    }
+  }
+}
+#Churches_goals {
+  background: url(../Assets/images/purple_hugging.svg);
+  @include BGConfig(100%, center);
+  min-height: 90vh;
+  height: max-content;
+  border-radius: 10px;
+  padding: 1rem 2rem;
+  //   padding-top: 10rem;
+  padding-bottom: 10rem;
+  //   width: 105%;
+  #heartIcon {
+    height: 100px;
+    width: 100px;
+    background: url(../Assets/icons/purple_heartIcon.svg);
+    @include BGConfig(100%, center);
+    // margin-top: 6rem;
+  }
+  p {
+    font-family: $Archivo;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 33px;
+    line-height: 59px;
+    text-transform: capitalize;
+    color: #ffffff;
+    margin: 2rem 0;
+  }
+}
+#Churches_forYou {
+  width: 859px;
+  height: max-content;
+  background: #ffffff;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.178);
+  border-radius: 12px;
+  padding: 1rem 2rem;
+  margin: -8rem 0 0 2rem;
+  ul {
+    li {
+      font-style: normal;
+      font-weight: normal;
+      font-size: 23px;
+      line-height: 41px;
+      text-transform: capitalize;
+      color: rgba(0, 0, 0, 0.49);
+      list-style: outside;
+      margin-bottom: 2rem;
+    }
+  }
+  h1 {
+    font-family: $DM;
+    font-weight: normal;
+    font-size: 55px;
+    line-height: 55px;
+    text-transform: capitalize;
+    color: #000000;
+    position: relative;
+    margin-bottom: 3rem;
+
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: -1rem;
+      width: 50px;
+      height: 10px;
+      background: $churchPagePurple;
+      border-radius: 10px;
+    }
+  }
+}
+
+#OurSolutions {
+  display: flex;
+  margin-top: 6rem;
+  #WhatToDo {
+    // width: 50%;
+    min-width: 801px;
+    height: 763px;
+    background: $churchPagePurple;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    border-radius: 12px;
+    padding: 2rem;
+
+    h2 {
+      color: white;
+      font-weight: normal;
+      font-size: 55px;
+      line-height: 55px;
+      text-transform: capitalize;
+      margin-bottom: 2rem;
+    }
+    ul {
+      li {
+        list-style: disc;
+        color: white;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 23px;
+        line-height: 52px;
+        text-transform: capitalize;
+        margin-bottom: 1rem;
+        margin-left: 1rem;
+      }
+    }
+  }
+  #HowToDoWhatToDo {
+    margin-left: 2rem;
+    h3 {
+      width: 482px;
+      font-weight: normal;
+      font-size: 55px;
+      line-height: 63px;
+      text-transform: capitalize;
+      color: #000000;
+      margin-bottom: 3rem;
+      position: relative;
+      &::before {
+        content: '';
+        position: absolute;
+        bottom: -10px;
+        left: 0;
+        border-radius: 20px;
+        height: 0.5rem;
+        width: 2rem;
+        background: $churchPagePurple;
+      }
+    }
+    ul {
+      li {
+        font-weight: normal;
+        font-size: 22px;
+        line-height: 27px;
+        text-transform: capitalize;
+        color: #000000;
+        list-style: url(../Assets/icons/purpleHyphen.svg);
+        margin-bottom: 1rem;
+      }
     }
   }
 }
