--- a/src/componentz/admin/TrashOverView/styles.scss
+++ b/src/componentz/admin/TrashOverView/styles.scss
@@ -4,7 +4,7 @@
 
 .has-data {
   padding: 2em;
-  .quote-preview {
+  .trash-preview {
     cursor: pointer;
     color: $white;
     width: 20%;
@@ -13,7 +13,7 @@
     box-shadow: $shadow;
     margin-right: 2em;
     text-align: center;
-    .quote-icon {
+    .trash-icon {
       height: 6em;
       width: 6em;
       border-radius: 0.5em;
@@ -25,7 +25,4 @@
     bottom: 2em;
     right: 2em;
   }
-}
-.quote {
-  color: $black;
 }
