added Training and Resources

--- a/src/Scss/homepage.scss
+++ b/src/Scss/homepage.scss
@@ -6,6 +6,7 @@ $grey: #a9a6a6;
 $blue: #0aa7ff;
 $purple: #ff0ac9;
 $yellow: #ffba0a;
+$pink: #ff34ba;
 
 // Mixins
 @mixin BGConfig($size, $position) {
