--- a/src/pages/admin/Inbox/styles.scss
+++ b/src/pages/admin/Inbox/styles.scss
@@ -2,13 +2,70 @@
 @import "../../../constants/scss/variables";
 @import "../../../constants/scss/mixins";
 
-.message-list {
-  .message-preview {
+.inbox {
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
+  .message-list,
+  .message-view {
+    width: 30%;
+    height: calc(100vh - 9em);
+    // border: 0.1em solid $black;
+  }
+  .message-list {
+    padding-right: 2em;
+    .message-preview {
+      display: flex;
+      align-items: center;
+      box-shadow: $shadow;
+      cursor: pointer;
+      padding: 0.5em;
+      position: relative;
+      margin: 0.5em 0;
+      .message-preview-icon {
+        height: 2.5em;
+        width: 2.5em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        box-shadow: $shadow;
+        margin-right: 0.6em;
+      }
+      .message-title {
+        font-size: 1em;
+      }
+      .timestamp {
+      }
+    }
+    .dot {
+      position: absolute;
+      top: 0.5em;
+      right: 0.5em;
+      background-color: $danger;
+      height: 0.6em;
+      width: 0.6em;
+      border-radius: 50%;
+    }
+  }
+  .divider {
+    height: calc(100vh - 10em);
+    width: 0.2em;
+    background-color: $tint;
+  }
+  .message-view {
+    padding-left: 2em;
+    flex: 1;
     display: flex;
-    box-shadow: $shadow;
-  }
-  .message-title {
-  }
-  .timestamp {
+    .not-viewing {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex: 1;
+      color: lighten($color: $black, $amount: 40);
+      h3 {
+        margin-left: 0.3em;
+      }
+    }
   }
 }
