--- a/src/componentz/admin/PublishedPost/styles.scss
+++ b/src/componentz/admin/PublishedPost/styles.scss
@@ -1,21 +1,75 @@
-$tablet: 850px;
-$smartphone: 500px;
-$primaryColor: #77323b;
-$blackColor: #000000;
-$secondaryColor: #ffffff;
+@import "../../../constants/scss/colors";
+@import "../../../constants/scss/variables";
+@import "../../../constants/scss/mixins";
 
-// Mixin
-@mixin tablet {
-  @media (max-width: #{$tablet}) {
-    @content;
+.admin-blog-post,
+.admin-draft-preview {
+  width: 80%;
+  min-height: 10em;
+  box-shadow: $shadow;
+  margin: 0.5em 0;
+  padding: 1.5em;
+  display: flex;
+  @include small-laptop() {
+    width: 100%;
+  }
+  @include tablet() {
+    flex-wrap: wrap;
+  }
+  justify-content: flex-start;
+  .tumbnail {
+    margin-right: 2em;
+    @include smartphone() {
+      margin: 0;
+    }
+    img {
+      // width: 25em;
+      height: 20em;
+      @include smartphone() {
+        width: 100%;
+      }
+    }
+  }
+  .text {
+    text-align: left;
+    margin-right: 1em;
+    display: flex;
+    flex-direction: column;
+    color: $black;
+    .title {
+      font-size: 1.5em;
+      text-transform: uppercase;
+      margin-bottom: 1em;
+    }
+    .hook {
+      font-size: 1em;
+      margin-bottom: 2em;
+    }
+  }
+  .controls {
+    margin-left: auto;
+    @include tablet() {
+      display: flex;
+      align-items: center;
+    }
+    .ctrl {
+      width: 4em !important;
+      height: 4em !important;
+      box-shadow: $shadow;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      margin: 5px;
+      padding: 0 !important;
+      img {
+        width: 1.5em;
+        margin: auto;
+      }
+    }
   }
 }
 
-@mixin smartphone {
-  @media (max-width: #{$smartphone}) {
-    @content;
-  }
-}
 .warning-container {
   position: fixed;
   top: 0;
@@ -27,25 +81,26 @@ $secondaryColor: #ffffff;
   .warning {
     margin: auto;
     width: 250px;
-    // height: 10px;
-    padding: 20px;
-    background-color: $primaryColor;
-    color: white;
+    // height: 1em;
+    padding: 2em;
+    background-color: $tint;
+    color: $white;
     text-align: center;
     box-shadow: 0px 3px 6px #00000028;
     .warning-btns {
       display: flex;
       justify-content: space-evenly;
       align-items: center;
-      padding: 10px 0;
+      padding: 2em 0;
       .warning-btn {
         height: 30px;
         width: 50px;
         border: 0;
         cursor: pointer;
-        background-color: #6ab5b9;
+        background-color: $danger;
         &:nth-child(2) {
-          background-color: #eab88c;
+          background-color: $black;
+          color: $white;
         }
       }
     }
@@ -56,12 +111,17 @@ $secondaryColor: #ffffff;
   align-items: center;
   margin-top: auto;
   margin-left: auto;
+  .carosel-post-text {
+    color: $black;
+    font-size: 0.8em;
+    font-weight: 600;
+  }
   .slider-item-check {
     cursor: pointer;
-    width: 20px;
-    height: 20px;
-    border: 2px solid #6ab5b9;
+    width: 1.5em;
+    height: 1.5em;
+    border: 0.2em solid $tint;
     transition: all 0.3s ease-in-out;
-    margin-left: 10px;
+    margin-left: 1em;
   }
 }
