--- a/src/componentz/TagOverview/styles.scss
+++ b/src/componentz/TagOverview/styles.scss
@@ -1,8 +1,8 @@
-@import "../../constants/scss/colors";
-@import "../../constants/scss/default";
-@import "../../constants/scss/variables";
-@import "../../constants/scss/mixins";
-@import "../../constants/scss/framework";
+@import '../../constants/scss/colors';
+@import '../../constants/scss/default';
+@import '../../constants/scss/variables';
+@import '../../constants/scss/mixins';
+@import '../../constants/scss/framework';
 
 .tag-overview {
   padding: 2em 2%;
@@ -59,7 +59,7 @@
     overflow: hidden;
     .article-text {
       .main-article-title {
-        font-size: 5em;
+        // font-size: 5em;
       }
     }
     .cr-btn-container {
