--- a/src/pages/admin/EditPost/styles.scss
+++ b/src/pages/admin/EditPost/styles.scss
@@ -31,6 +31,13 @@
     width: 40%;
     height: 100%;
   }
+  .hook-label {
+    color: $black;
+    font-size: 1.2em;
+    // font-family: ;
+    margin-left: 0.2em;
+    margin-bottom: 0.5em;
+  }
   .left {
     padding-right: 2em;
   }
