made changes to the goals csections of the four rss pages

--- a/src/Scss/churchMessage.scss
+++ b/src/Scss/churchMessage.scss
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Archivo:wght@300;400;500;700&family=DM+Serif+Display&display=swap");
-$DM: "DM Serif Display", serif;
-$Archivo: "Archivo", sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Archivo:wght@300;400;500;700&family=DM+Serif+Display&display=swap');
+$DM: 'DM Serif Display', serif;
+$Archivo: 'Archivo', sans-serif;
 
 $teal: #009ba7;
 $grey: #a9a6a6;
@@ -67,8 +67,8 @@ $churchPagePurple: #b00aff;
       cursor: pointer;
 
       .icon {
-        height: "50px";
-        width: "50px";
+        height: '50px';
+        width: '50px';
         background-image: url(../Assets/icons/purplePlayBtn.svg);
         @include BGConfig(80%, center);
       }
@@ -95,15 +95,20 @@ $churchPagePurple: #b00aff;
   }
 }
 #Churches_goals {
-  background: url(../Assets/images/purple_hugging.svg);
-  @include BGConfig(100%, center);
+  background: url(../Assets/images/lecture.jpg);
+  @include BGConfig(120%, center);
   min-height: 90vh;
   height: max-content;
   border-radius: 10px;
-  padding: 1rem 2rem;
-  //   padding-top: 10rem;
-  padding-bottom: 10rem;
-  //   width: 105%;
+
+  .bgLayer {
+    background: rgba(176, 10, 255, 0.85);
+    min-height: 90vh;
+    width: 100%;
+    padding: 1rem 2rem;
+    border-radius: 10px;
+    padding-bottom: 10rem;
+  }
   #heartIcon {
     height: 100px;
     width: 100px;
@@ -153,7 +158,7 @@ $churchPagePurple: #b00aff;
     margin-bottom: 3rem;
 
     &::before {
-      content: "";
+      content: '';
       position: absolute;
       left: 0;
       bottom: -1rem;
@@ -211,7 +216,7 @@ $churchPagePurple: #b00aff;
       margin-bottom: 3rem;
       position: relative;
       &::before {
-        content: "";
+        content: '';
         position: absolute;
         bottom: -10px;
         left: 0;
