--- a/src/Components/PopUp/Popup.scss
+++ b/src/Components/PopUp/Popup.scss
@@ -52,6 +52,7 @@ $Archivo: 'Archivo', sans-serif;
   line-height: 44px;
   font-family: $Archivo;
   font-weight: normal;
+  width: 60%;
 }
 
 .popUpSource {
