--- a/src/Scss/syllabusCard.scss
+++ b/src/Scss/syllabusCard.scss
@@ -16,7 +16,7 @@
     height: 61px;
     padding: 0.5rem 0 0 1rem;
     color: white;
-    user-select: none;
+    font-size: 19px;
   }
 
   .cardContent {
