--- a/src/pages/Carers/Carers.scss
+++ b/src/pages/Carers/Carers.scss
@@ -99,15 +99,11 @@ $yellow: #ffba0a;
 }
 
 #Carer_goals {
-  background: url(../../Assets/images/blue_hugging.svg);
+  background: url(../../Assets/images/carers.jpg);
   @include BGConfig(120%, center);
   min-height: 90vh;
   height: max-content;
   border-radius: 10px;
-  // padding: 1rem 2rem;
-  //   padding-top: 10rem;
-  // padding-bottom: 10rem;
-  //   width: 105%;
 
   .bgLayer {
     background: rgba(10, 167, 255, 0.85);
@@ -115,7 +111,6 @@ $yellow: #ffba0a;
     width: 100%;
     padding: 1rem 2rem;
     border-radius: 10px;
-    // padding-top: 10rem;
     padding-bottom: 10rem;
   }
   #heartIcon {
