--- a/src/pages/PublicSpeaking/PublicSpeaking.scss
+++ b/src/pages/PublicSpeaking/PublicSpeaking.scss
@@ -100,15 +100,20 @@ $publicSpeakingOrange: #ff6725;
   }
 }
 #PS_goals {
-  background: url(../../Assets/images/Orange_hugging.svg);
-  @include BGConfig(100%, center);
+  background: url(../../Assets/images/training.jpg);
+  @include BGConfig(120%, center);
   min-height: 90vh;
   height: max-content;
   border-radius: 10px;
-  padding: 1rem 2rem;
-  //   padding-top: 10rem;
-  padding-bottom: 10rem;
-  //   width: 105%;
+
+  .bgLayer {
+    background: rgba(255, 103, 37, 0.85);
+    min-height: 90vh;
+    width: 100%;
+    padding: 1rem 2rem;
+    border-radius: 10px;
+    padding-bottom: 10rem;
+  }
   #heartIcon {
     height: 100px;
     width: 100px;
