--- a/src/Scss/syllabusCard.scss
+++ b/src/Scss/syllabusCard.scss
@@ -45,6 +45,13 @@
       color: white;
       margin-top: 1rem;
       cursor: pointer;
+      transition: all 0.5s;
+
+      &:hover {
+        background: rgb(255, 255, 255);
+        border: 1px solid rgba(0, 155, 167, 0.51);
+        color: rgb(0, 156, 167);
+      }
     }
   }
 }
