--- a/src/componentz/BlogOverview/styles.scss
+++ b/src/componentz/BlogOverview/styles.scss
@@ -25,10 +25,10 @@
     overflow: hidden;
     .article-text {
       .main-article-title {
-        // font-size: 6.6em;
+        font-size: 4em;
       }
       .main-article-hook {
-        // font-size: 2.2em;
+        font-size: 2.2em;
       }
     }
     .cr-btn-container {
